# AetherSim

./: .gitignore  README.md  app.py
python_gestures/: gesture_server.py  requirements.txt
rust_particles/: Cargo.toml
rust_particles/src/: lib.rs
src/: lib.rs  simulation.rs
web/: index.html
