[package]
name = "particles_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement"] }
js-sys = "0.3"
rand = { version = "0.8", features = ["std_rng"] }

[profile.release]
opt-level = "s"
lto = true
